Add managerId to player and delete postman collection
